# ai_essentials_rag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  pytest.ini  read_me.md  test.ipynb
chroma/rag/bb725ed5-139f-4401-9cb7-710596b57b5c/: index_metadata.pickle
chroma/rag_material/06987f10-0e79-43a2-b2a9-9323d4c7649e/: index_metadata.pickle
chroma/rag_material/73964aa9-630d-469c-87b5-9070aee0bdb4/: index_metadata.pickle
config/: load_env.py  paths.py  settings.yaml  types.py
data/: structured_text.md  textbook.md
ingestion/: clean.py  prep.py  scrape.py
prompts/: components.yaml  ingestion_prompts.yaml  rag_prompts.yaml
rag_assistant/: gradio_interface.py  rag_assistant.py
tests/: conftest.py  test_app.py  test_gradio_interface.py  test_integration_prep.py  test_integration_rag_pipeline.py  test_integration_scrape.py  test_rag_assistant.py  test_unit_chunk_content.py  test_unit_load_yaml.py  test_unit_prompt_builder.py  test_unit_validation.py
utils/: chunk_content.py  kwarg_parser.py  load_files.py  load_yaml_config.py  logging_helper.py  prompt_builder.py  rate_limits.py  regex_for_blueprint_text.py  terminal_dict_parsing.py  tools.py
vector_store/: initialize.py  insert.py
